--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<b class="satu">Hi! this is Jo's :)</b>
 		<b class="dua">*PS; Dap, dibuat saat gabut oleh anak perhukuman</b>
 	</div>
+	<div class="deco">
+		<b class="atas"></b>
+	</div>
 </ul>
 </body>
 </html>
